svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: resshaikfinal
  name: resshaikfinal
  namespace: resshaik-ns # namespace 
spec:
  ports:
  - name: 1234-80
    port: 1234
    protocol: TCP
    targetPort: 80
  selector: # endpoint creator using pod label 
    app: resshaik-app # this is label of pod 
  type: ClusterIP
status:
  loadBalancer: {}
