route.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: resshaik-route-rule-1
  namespace: resshaik-ns
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx # name of class means product code name of ingress 
  rules:
  - host: www.resshaik.io 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: resshaikfinal  # name of internal lb / svc 
            port:
              number: 80
